--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -24,11 +24,16 @@ main {
   flex-direction: column;
 }
 
+#add-button {
+  margin-bottom: 2em;
+  margin-left: 3em;
+}
+
 #overview {
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
-  margin-left: 2em;
+  margin-left: 3em;
 }
 
 hr {
